<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, TopActivity!</string>
    <string name="app_name">Click-Click Shortcut</string>
    <string name="info">Information</string>
    <string name="preview">Preview</string>
    <string name="groups">All Groups</string>
    <string name="changePosition">Change Position</string>
    <string name="changeIcon">Change Icon</string>
    <string name="settings">Settings</string>
    <string name="newGroup">New Group</string>
    <string name="builtinDialer">Dialer</string>
    <string name="builtinMessage">Message</string>
    <string name="builtinInternet">Internet</string>
    <string name="builtinEmail">Email</string>
    <string name="builtinWiki">WIFI</string>
    <string name="builtinBattery">Battery</string>
    <string name="builtinRunningServices">Running Services</string>
    <string name="timerHelp">Timer Expression Format</string>
</resources>
