<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/changePosition"
          android:icon="@drawable/position_48"
          android:title="@string/changePosition" />
    <item android:id="@+id/changeIcon"
          android:icon="@drawable/star_48"
          android:title="@string/changeIcon" />
    <item android:id="@+id/groups"
          android:icon="@drawable/preview_48"
          android:title="@string/groups" />
    <item android:id="@+id/newGroup"
          android:icon="@drawable/star_48_add"
          android:title="@string/newGroup" />
    <item android:id="@+id/settings"
          android:icon="@drawable/settings_48"
          android:title="@string/settings" />
    <item android:id="@+id/info"
          android:icon="@drawable/favorite_info_80x56"
          android:title="@string/info" />
</menu>
